--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [build]
-builder = "static"
+command = "echo 'No build step needed'"
 
-[static]
-public_dir = "."
+[deploy]
+startCommand = "npx serve ."
